# gen_financial_report

./: .gitignore  README.md  company_collect_data.py  config.py  fix_docx_conversion.py  gen_report_company.py  gen_report_industry.py  gen_report_macro.py  generate_report.py  industry_collection_data.py  macro_collection_data.py  pyproject.toml  quick_run_examples.py  report_prompts.py  requirements.txt  run.sh  run_company_research_report.py  run_industry_research_report.py  run_macro_research_report.py  test_pandoc.py  unified_report_generator.py
data_process/: base_data_collection.py  base_report_generator.py  base_visual_data_enhancer.py  base_visualization_processor.py  company_data_collection.py  company_report_content_assembler.py  company_report_data_processor.py  company_visual_data_enhancer.py  company_visualization_data_processor.py  content_summarizer.py  data_collector.py  find_competitors.py  industry_data_collection.py  industry_report_content_assembler.py  industry_visual_data_enhancer.py  industry_visualization_data_processor.py  macro_data_collection.py  macro_report_content_assembler.py  macro_visual_data_enhancer.py  macro_visualization_data_processor.py  outline_data_allocator.py  search_data_processor.py
financial_report/: __init__.py
md2docx/: 4Paradigm_research_report.md  md2docx.py
search_server/: README.md  requirements.txt  search.py  test_search.py
tests/: base_report_content_assembler.py  base_report_data_processor.py  company_gen_report.py  debug_json_extraction.py  test_multiprocess_png.py  test_section_matching.py  (+2 more)
(+62 files in other folders)
